[package]
name = "harptabber-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.27.2" # Gives us egui, web+native backends
harptabber = { path = "../harptabber" }
log = "0.4"
regex = "1.10.2"
catppuccin-egui = { version = "5.1", default-features = false, features = ["egui27"] }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = "0.14"
env_logger = "0.10"

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[features]
default = []
