[package]
name = "harptabber-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"
harptabber = { path = "../harptabber" }
regex = "1.10.2"
# egui33 feature not yet released
# catppuccin-egui = { version = "5.6.0", default-features = false, features = ["egui33"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = "0.14"
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
