[package]
name = "harptabber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1.10.2"
lazy_static = "1.4.0"
harptool = { git = "https://github.com/Seebass22/harptool", rev = "d70a328", default-features = false }
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = "0.14"
